feat: implement new `patchExistingEntity` signature in ProductCategory service
include unit tests
introduce 1 temporary sonar issue