@@ -21,10 +21,14 @@
 package org.trebol.jpa.services.patch.impl;
 
 import lombok.NoArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.trebol.api.models.ProductCategoryPojo;
+import org.trebol.common.exceptions.BadInputException;
 import org.trebol.jpa.entities.ProductCategory;
 import org.trebol.jpa.services.patch.ProductCategoriesPatchService;
+
+import java.util.Map;
 
 @Service
 @NoArgsConstructor
@@ -32,14 +36,28 @@ public class ProductCategoriesPatchServiceImpl
   implements ProductCategoriesPatchService {
 
   @Override
-  public ProductCategory patchExistingEntity(ProductCategoryPojo changes, ProductCategory existing) {
+  public ProductCategory patchExistingEntity(Map<String, Object> changes, ProductCategory existing) throws BadInputException {
     ProductCategory target = new ProductCategory(existing);
 
-    String name = changes.getName();
-    if (name != null && !name.isBlank() && !target.getName().equals(name)) {
-      target.setName(name);
+    if (changes.containsKey("code")) {
+      String code = (String) changes.get("code");
+      if (!StringUtils.isBlank(code)) {
+        target.setCode(code);
+      }
+    }
+
+    if (changes.containsKey("name")) {
+      String name = (String) changes.get("name");
+      if (!StringUtils.isBlank(name)) {
+        target.setName(name);
+      }
     }
 
     return target;
+  }
+
+  @Override
+  public ProductCategory patchExistingEntity(ProductCategoryPojo changes, ProductCategory existing) throws BadInputException {
+    throw new UnsupportedOperationException("This method signature has been deprecated");
   }
 }
